# know-me-better

./: .gitignore  LICENSE  README.md  pyproject.toml
know_me_better/ingestion/: ingest.py
know_me_better/rag/: main.py  utils.py
know_me_better/streamlit/: app.py
