[tool.poetry]
name = "know-me-better"
version = "0.1.0"
description = ""
authors = ["Jagan <jaganshanmugam@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^2.3.0"
langchain = "^0.1.16"
python-dotenv = "^1.0.1"
langchain-community = "^0.0.32"
sentence-transformers = "^2.6.1"
pymupdf = "^1.24.1"
python-pptx = "^0.6.23"
supabase = "^2.4.1"
openai = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
